# ci-playground

./: .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yaml
.github/workflows/: deploy-devcontainer.yml  run-quality-check.yml  run-tests.yml
tests/: test_dummy.py
